--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -454,7 +454,11 @@
                 }}
               </div>
             {%- else -%}
-              <span class="h2">{{ shop.name }}</span>
+              {%- if settings.store_name != blank -%}
+                <span class="h2">{{ settings.store_name }}</span>
+              {% else %}
+                <span class="h2">{{ shop.name }}</span>
+              {%- endif -%}
             {%- endif -%}
           </a>
       {%- if request.page_type == 'index' -%}
