--- a/assets/base.css
+++ b/assets/base.css
@@ -249,6 +249,12 @@ html.no-js .no-js-hidden {
   padding: 0 1.5rem;
 }
 
+.page-width-full {
+  max-width: var(--page-width-full);
+  margin: 0 auto;
+  padding: 0 1.5rem;
+}
+
 .page-width.drawer-menu {
   max-width: 100%;
 }
@@ -260,6 +266,10 @@ html.no-js .no-js-hidden {
 
 @media screen and (min-width: 750px) {
   .page-width {
+    padding: 0 5rem;
+  }
+
+  .page-width-full {
     padding: 0 5rem;
   }
 
