--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -288,7 +288,9 @@
 
 @media screen and (min-width: 990px) {
   .image-with-text__content {
-    padding: 6rem 7rem 7rem;
+    /* padding: 6rem 7rem 7rem; */
+    padding: 0rem 2rem 0rem;
+    justify-content: center;
   }
 }
 
