--- a/sections/video-with-text.liquid
+++ b/sections/video-with-text.liquid
@@ -11,6 +11,8 @@
   }
   .image-with-text__video video{
     width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .35);
   }
 
   @media screen and (min-width: 750px) {
