--- a/sections/brands-slider.liquid
+++ b/sections/brands-slider.liquid
@@ -88,7 +88,7 @@
   ],
   "blocks": [
     {
-      "type": "image",
+      "type": "brand",
       "name": "Brand",
       "settings": [
         {
@@ -102,6 +102,11 @@
           "label": "Brand Name"
         }
       ]
+    }
+  ],
+  "presets": [
+    {
+      "name": "Brand Slider"
     }
   ]
 }
