--- a/sections/brands-slider.liquid
+++ b/sections/brands-slider.liquid
@@ -145,7 +145,7 @@
   ],
   "blocks": [
     {
-      "type": "brand",
+      "type": "heading",
       "name": "Brand",
       "settings": [
         {
