--- a/sections/brands-slider.liquid
+++ b/sections/brands-slider.liquid
@@ -145,19 +145,19 @@
   ],
   "blocks": [
     {
-      "type": "heading",
+      "type": "brand_name",
       "name": "Brand",
       "settings": [
-        {
-          "type": "image_picker",
-          "id": "brand_logo",
-          "label": "Brand Logo"
-        },
         {
           "type": "text",
           "id": "brand_name",
           "label": "Brand Name"
-        }
+        },
+        {
+          "type": "image_picker",
+          "id": "brand_logo",
+          "label": "Brand Logo"
+        }        
       ]
     }
   ],
