--- a/sections/brands-slider.liquid
+++ b/sections/brands-slider.liquid
@@ -145,7 +145,7 @@
   ],
   "blocks": [
     {
-      "type": "brand_name",
+      "type": "brand",
       "name": "Brand",
       "settings": [
         {
@@ -161,10 +161,12 @@
       ]
     }
   ],
-  "presets": [
-    {
-      "name": "Brand Slider"
-    }
-  ]
+  "default": {
+    "blocks": [
+      {
+        "type": "brand"
+      }
+    ]
+  }
 }
 {% endschema %}
