--- a/sections/brands-slider.liquid
+++ b/sections/brands-slider.liquid
@@ -151,6 +151,7 @@
         {
           "type": "text",
           "id": "brand_name",
+          "default": "Brand Name",
           "label": "Brand Name"
         },
         {
@@ -161,12 +162,10 @@
       ]
     }
   ],
-  "default": {
-    "blocks": [
-      {
-        "type": "brand"
-      }
-    ]
-  }
+  "presets": [
+    {
+      "name": "Brand Slider"
+    }
+  ]
 }
 {% endschema %}
