--- a/sections/brands-slider.liquid
+++ b/sections/brands-slider.liquid
@@ -47,6 +47,13 @@
 
 <div class="isolate{% unless section.settings.full_width %} page-width{% endunless %}">
   <div class="color-{{ section.settings.color_scheme }} gradient{% if section.settings.full_width %} content-container--full-width{% endif %} section-{{ section.id }}-padding">
+    <h2
+      class="image-with-text__heading inline-richtext {{ section.settings.heading_size }}"
+      {{ section.shopify_attributes }}
+    >
+      {{ section.settings.heading }}
+    </h2>
+
     <ul class="brand-list">
     {% for block in section.blocks %}
       {%- case block.type -%}
@@ -69,6 +76,32 @@
     "groups": ["header", "footer"]
   },
   "settings": [
+    {
+      "type": "inline_richtext",
+      "id": "heading",
+      "default": "Our Clients",
+      "label": "Heading"
+    },
+    {
+      "type": "select",
+      "id": "heading_size",
+      "options": [
+        {
+          "value": "h2",
+          "label": "t:sections.all.heading_size.options__1.label"
+        },
+        {
+          "value": "h1",
+          "label": "t:sections.all.heading_size.options__2.label"
+        },
+        {
+          "value": "h0",
+          "label": "t:sections.all.heading_size.options__3.label"
+        }
+      ],
+      "default": "h1",
+      "label": "t:sections.all.heading_size.label"
+    },
     {
       "type": "select",
       "id": "color_scheme",
