--- a/assets/base.css
+++ b/assets/base.css
@@ -3162,3 +3162,9 @@ details-disclosure > details {
     100% { transform: rotate(360deg) translateX(1em) rotate(-360deg) scale(1.2); }
   }
 }
+
+
+/* Custom */
+.text-center {
+  text-align: center;
+}
