--- a/sections/brands-slider.liquid
+++ b/sections/brands-slider.liquid
@@ -46,7 +46,8 @@
 {%- endstyle -%}
 
 <div class="isolate{% unless section.settings.full_width %} page-width{% endunless %}">
-  <div class="color-{{ section.settings.color_scheme }} gradient{% if section.settings.full_width %} content-container--full-width{% endif %} section-{{ section.id }}-padding">
+  <div class="color-{{ section.settings.color_scheme }} gradient{% if section.settings.full_width %} content-container--full-width{% endif %} section-{{ section.id }}-padding text-center">
+    
     <h2
       class="image-with-text__heading inline-richtext {{ section.settings.heading_size }}"
       {{ section.shopify_attributes }}
