--- a/snippets/tab-content-5.liquid
+++ b/snippets/tab-content-5.liquid
@@ -1,4 +1,4 @@
-<div style="color: rgb(255, 255, 255);">
+<div >
   <p>
     We use automated reporting dashboards to share our summarized paid media efforts. Keep up to date on
     daily/weekly/monthly reports on the fly that contain every bit of data represented in an easy-to-understand manner.
