--- a/snippets/tab-content-3.liquid
+++ b/snippets/tab-content-3.liquid
@@ -1,4 +1,4 @@
-<div style="color: rgb(255, 255, 255);">
+<div >
   <ul>
     <li>
       We work with any creative/content team by sharing industry trends and tips and using data analytics to make
