--- a/snippets/tab-content-4.liquid
+++ b/snippets/tab-content-4.liquid
@@ -1,4 +1,4 @@
-<div style="color: rgb(255, 255, 255);">
+<div >
   <p>
     There is so much to learn from every dollar spent on advertising. Every bit of data is a stroke with a paintbrush in
     painting a big picture to understand our customers.
