--- a/snippets/tab-content-5.liquid
+++ b/snippets/tab-content-5.liquid
@@ -10,7 +10,7 @@
     purchase to the customer and their entire journey from first seeing an ad to making the purchase.
   </p>
   <div class="platform-logos reporting">
-    <img src="/_next/static/media/3.933ffeff.png" alt="Triple Whale">
-    <img src="/_next/static/media/2.9e4d3dc2.png" alt="North Beam">
+    <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/triple-whale.png?v=1719608515" alt="Triple Whale" style="width: 150px; margin: 1rem;">
+    <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/north-beam.png?v=1719608515" alt="North Beam" style="margin: 10px; margin: 1rem;">
   </div>
 </div>
