--- a/snippets/tab-content-5.liquid
+++ b/snippets/tab-content-5.liquid
@@ -11,6 +11,6 @@
   </p>
   <div class="platform-logos reporting">
     <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/triple-whale.png?v=1719608515" alt="Triple Whale" style="width: 150px; margin: 1rem;">
-    <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/north-beam.png?v=1719608515" alt="North Beam" style="margin: 10px; margin: 1rem;">
+    <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/north-beam.png?v=1719608515" alt="North Beam" style="width: 150px; margin: 1rem;">
   </div>
 </div>
