--- a/sections/slideshow-custom.liquid
+++ b/sections/slideshow-custom.liquid
@@ -286,6 +286,11 @@
   },
   "settings": [
     {
+      "type": "image_picker",
+      "id": "section_background",
+      "label": "Section Background"
+    },
+    {
       "type": "select",
       "id": "layout",
       "options": [
