--- a/sections/slideshow-custom.liquid
+++ b/sections/slideshow-custom.liquid
@@ -22,6 +22,13 @@
 
 .section-bg  {
   background-image: url('{{ section.settings.section_background | image_url }}');
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.slider-buttons {
+    border: none;
 }
 {% endstyle %}
 
@@ -49,7 +56,7 @@
 {%- endif -%}
 
 <slideshow-component
-  class="section-bg slider-mobile-gutter{% if section.settings.layout == 'grid' %} page-width{% endif %}{% if section.settings.show_text_below %} mobile-text-below{% endif %} section-{{ section.id }}-padding"
+  class="slider-mobile-gutter{% if section.settings.layout == 'grid' %} page-width{% endif %}{% if section.settings.show_text_below %} mobile-text-below{% endif %} section-{{ section.id }}-padding"
   role="region"
   aria-roledescription="{{ 'sections.slideshow.carousel' | t }}"
   aria-label="{{ section.settings.accessibility_info | escape }}"
@@ -150,7 +157,7 @@
         aria-label="{{ forloop.index }} {{ 'general.slider.of' | t }} {{ forloop.length }}"
         tabindex="-1"
       >
-        <div class="slideshow__media slideshow__media banner__media-custom media{% if block.settings.image == blank %} placeholder{% endif %}{% if section.settings.image_behavior != 'none' %} animate--{{ section.settings.image_behavior }}{% endif %}">
+        <div class="slideshow__media slideshow__media banner__media-custom media{% if block.settings.image == blank %} placeholder{% endif %}{% if section.settings.image_behavior != 'none' %} animate--{{ section.settings.image_behavior }}{% endif %} bg-none">
           <div class="page-width">
             {%- if block.settings.image -%}
               {%- liquid
