--- a/sections/slideshow-custom.liquid
+++ b/sections/slideshow-custom.liquid
@@ -30,6 +30,10 @@
 .slider-buttons {
     border: none;
 }
+
+.image-with-text__heading {
+  margin-bottom: 3rem;
+}
 {% endstyle %}
 
 {%- if section.settings.slide_height == 'adapt_image' and section.blocks.first.settings.image != blank -%}
@@ -55,12 +59,21 @@
   {%- endstyle -%}
 {%- endif -%}
 
+
+
 <slideshow-component
   class="slider-mobile-gutter{% if section.settings.layout == 'grid' %} page-width{% endif %}{% if section.settings.show_text_below %} mobile-text-below{% endif %} section-{{ section.id }}-padding"
   role="region"
   aria-roledescription="{{ 'sections.slideshow.carousel' | t }}"
   aria-label="{{ section.settings.accessibility_info | escape }}"
 >
+  <h2
+    class="image-with-text__heading inline-richtext {{ section.settings.heading_size }} text-center"
+    {{ section.shopify_attributes }}
+  >
+    {{ section.settings.heading }}
+  </h2>
+
   {%- if section.settings.auto_rotate and section.blocks.size > 1 -%}
     <div class="slideshow__controls slideshow__controls--top slider-buttons no-js-hidden{% if section.settings.show_text_below %} slideshow__controls--border-radius-mobile{% endif %}">
       <button
@@ -308,6 +321,32 @@
     "groups": ["header", "footer"]
   },
   "settings": [
+    {
+      "type": "inline_richtext",
+      "id": "heading",
+      "default": "WHAT WE CAN DO FOR YOU",
+      "label": "Heading"
+    },
+    {
+      "type": "select",
+      "id": "heading_size",
+      "options": [
+        {
+          "value": "h2",
+          "label": "t:sections.all.heading_size.options__1.label"
+        },
+        {
+          "value": "h1",
+          "label": "t:sections.all.heading_size.options__2.label"
+        },
+        {
+          "value": "h0",
+          "label": "t:sections.all.heading_size.options__3.label"
+        }
+      ],
+      "default": "h1",
+      "label": "t:sections.all.heading_size.label"
+    },
     {
       "type": "image_picker",
       "id": "section_background",
