--- a/sections/slideshow-custom.liquid
+++ b/sections/slideshow-custom.liquid
@@ -22,7 +22,7 @@
 
 .section-bg  {
   background-image: url('{{ section.settings.section_background | image_url }}');
-  background-position: 50%;
+  /* background-position: 50%; */
   background-repeat: no-repeat;
   background-size: cover;
 }
