--- a/sections/partners-section.liquid
+++ b/sections/partners-section.liquid
@@ -25,7 +25,7 @@
 
 {% schema %}
 {
-  "name": "Base Section",
+  "name": "Partners Section",
   "tag": "section",
   "class": "section",
   "disabled_on": {
