--- a/assets/collapsible-content.css
+++ b/assets/collapsible-content.css
@@ -94,12 +94,12 @@
 }
 
 .collapsible-content summary:hover {
-  background: rgba(var(--color-foreground), 0.04);
+  /* background: rgba(var(--color-foreground), 0.04); */
 }
 
 .collapsible-content summary:hover .accordion__title {
-  text-decoration: underline;
-  text-underline-offset: 0.3rem;
+  /* text-decoration: underline; */
+  /* text-underline-offset: 0.3rem; */
 }
 
 /* check for flexbox gap in older Safari versions */
