--- a/assets/component-accordion.css
+++ b/assets/component-accordion.css
@@ -2,7 +2,8 @@
   display: flex;
   position: relative;
   line-height: 1;
-  padding: 1.5rem 0;
+  /* padding: 1.5rem 0; */
+  padding: 0;
 }
 
 .accordion .summary__title {
@@ -21,9 +22,13 @@
 
 .accordion {
   margin-top: 2.5rem;
-  margin-bottom: 0;
+  margin-bottom: 2rem;
   border-top: 0.1rem solid rgba(var(--color-foreground), 0.08);
   border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
+  border: 1.5px solid #fff !important;
+  background-color: #121212 !important;
+  border-radius: 10px !important;
+  padding: 1.6rem;
 }
 
 .accordion__title {
@@ -32,6 +37,8 @@
   min-height: 1.6rem;
   margin: 0;
   word-break: break-word;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: bold;
 }
 
 .accordion .icon-accordion {
@@ -50,7 +57,8 @@
   margin-bottom: 1.5rem;
   word-break: break-word;
   overflow-x: auto;
-  padding: 0 0.6rem;
+  padding: 1rem 0 0 0;
+  margin-bottom: 0;
 }
 
 .accordion__content img {
