--- a/sections/collapsible-content.liquid
+++ b/sections/collapsible-content.liquid
@@ -244,7 +244,7 @@
         }
       ],
       "default": "background-1",
-      "label": "t:sections.all.colors.label"
+      "label": "Button Color Scheme"
     },
     {
       "type": "select",
