--- a/sections/collapsible-content.liquid
+++ b/sections/collapsible-content.liquid
@@ -93,14 +93,14 @@
     </div>
 
     {%- if section.settings.button_label != blank -%}
-      <div class="text-center">
+      <div class="text-center color-{{ section.settings.button_color_scheme }} gradient">
         <a
           {% if section.settings.button_link == blank %}
             role="link" aria-disabled="true"
           {% else %}
             href="{{ section.settings.button_link }}"
           {% endif %}
-          class="button{% if section.settings.button_style_secondary %} button--secondary{% else %} button--primary{% endif %} color-{{ section.settings.button_color_scheme }} gradient"
+          class="button{% if section.settings.button_style_secondary %} button--secondary{% else %} button--primary{% endif %}"
           {{ section.shopify_attributes }}
         >
           {{ section.settings.button_label | escape }}
