--- a/sections/pricing-section.liquid
+++ b/sections/pricing-section.liquid
@@ -61,6 +61,32 @@
       {% for block in section.blocks %}
         {%- case block.type -%}
           {%- when 'service' -%}
+            {% if section.settings.collapsible_content %}
+              <div class="accordion">
+                <details
+                  id="Details-{{ block.id }}-{{ section.id }}"
+                  {% if section.settings.open_first_collapsible_row and forloop.first %}
+                    open
+                  {% endif %}
+                >
+                  <summary id="Summary-{{ block.id }}-{{ section.id }}">
+                    <h3 class="accordion__title inline-richtext h4">
+                      {{ block.settings.text }}
+                    </h3>
+                    {% render 'icon-caret' %}
+                  </summary>
+                  <div
+                    class="accordion__content rte"
+                    id="CollapsibleAccordion-{{ block.id }}-{{ section.id }}"
+                    role="region"
+                    aria-labelledby="Summary-{{ block.id }}-{{ section.id }}"
+                  >
+                    {{ block.settings.richtext }}
+                    {{ block.settings.html }}
+                  </div>
+                </details>
+              </div>
+            {% else %}
             <div class="pricing-category ">
               <h3 class="pricing-heading {% if block.settings.center_heading %}text-center{% endif %}">{{ block.settings.text }}</h3>
               <div class="{% if block.settings.center_content %}text-center{% endif %}">
@@ -68,8 +94,36 @@
                 {{ block.settings.html }}
               </div>
             </div>
+            {% endif %}
         {%- endcase -%}
       {% endfor %}
+
+      {% comment %} {%- for block in section.blocks -%}
+        <div class="accordion">
+          <details
+            id="Details-{{ block.id }}-{{ section.id }}"
+            {% if section.settings.open_first_collapsible_row and forloop.first %}
+              open
+            {% endif %}
+          >
+            <summary id="Summary-{{ block.id }}-{{ section.id }}">
+              <h3 class="accordion__title inline-richtext h4">
+                {{ block.settings.text }}
+              </h3>
+              {% render 'icon-caret' %}
+            </summary>
+            <div
+              class="accordion__content rte"
+              id="CollapsibleAccordion-{{ block.id }}-{{ section.id }}"
+              role="region"
+              aria-labelledby="Summary-{{ block.id }}-{{ section.id }}"
+            >
+              {{ block.settings.richtext }}
+              {{ block.settings.html }}
+            </div>
+          </details>
+        </div>
+      {%- endfor -%} {% endcomment %}
     </div>
   </div>
 </div>
@@ -148,6 +202,12 @@
       "id": "full_width",
       "default": true,
       "label": "t:sections.rich-text.settings.full_width.label"
+    },
+    {
+      "type": "checkbox",
+      "id": "collapsible_content",
+      "default": false,
+      "label": "Collapsible Content"
     },
     {
       "type": "header",
