--- a/sections/custom-tabs.liquid
+++ b/sections/custom-tabs.liquid
@@ -27,6 +27,7 @@
     display: none;
     padding: 20px;
     border: 1px solid #ccc;
+    text-align: left;
   }
 
   [name="tab"] {
@@ -63,7 +64,7 @@
         {{ section.settings.sub_heading }}
       </div>
 
-      <div>
+      <div class="text-center">
         <input type="radio" id="tab1" name="tab" checked>
         <label for="tab1" class="tab-label">Media Buying</label>
 
