--- a/sections/main-page.liquid
+++ b/sections/main-page.liquid
@@ -15,7 +15,7 @@
 {%- endstyle -%}
 
 <div class="page-width page-width--narrow section-{{ section.id }}-padding">
-  <h1 class="main-page-title page-title h0">
+  <h1 class="main-page-title page-title h1 text-center">
     {{ page.title | escape }}
   </h1>
   <div class="rte">
