--- a/sections/pricing-section.liquid
+++ b/sections/pricing-section.liquid
@@ -41,22 +41,26 @@
 {%- endstyle -%}
 <div class="section-{{ section.id }}-padding">
   <div class="isolate{% unless section.settings.full_width %} page-width{% endunless %} page-width-narrow">
+    {% if section.settings.heading != blank %}
     <h2
       class="image-with-text__heading inline-richtext {{ section.settings.heading_size }} text-center"
       {{ section.shopify_attributes }}
     >
       {{ section.settings.heading }}
     </h2>
+    {% endif %}
 
     
 
     <div class="color-{{ section.settings.color_scheme }} gradient{% if section.settings.full_width %} content-container--full-width{% endif %} pricing-container">
+      {% if section.settings.sub_heading %}
       <h3
         class="image-with-text__heading inline-richtext h3 text-center"
         {{ section.shopify_attributes }}
       >
         {{ section.settings.sub_heading }}
       </h3>
+      {% endif %}
 
       {% for block in section.blocks %}
         {%- case block.type -%}
